# bevy-state-match-prototype

./: Cargo.toml  README.md  book.toml
.github/workflows/: ci.yml
examples/: black_box_state.rs  nested_state.rs  state_transitions.rs  struct_state.rs
macros/: Cargo.toml
macros/src/: lib.rs  state_matchers.rs
src/: app.rs  injected_methods.rs  lib.rs  state.rs  state_matching.rs
